--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,16 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Python Debugger: Background",
+      "name": "Python Debugger: Background 2024",
       "type": "debugpy",
       "request": "launch",
       "program": "scripts/itchio-background.py",
       "console": "integratedTerminal",
-      "args": ["backgrounds2024", "2024"]
+      "args": [
+        "backgrounds2024",
+        "2024",
+        "${command:pickArgs}"
+      ]
     }
   ]
 }
